Jul 15, 2004

  * FIXED: rdf_safe_header/2 implementation and documentation.  Sandro Hawke.

Jun 29, 2004

  * FIXED: rdf_split_url(+, +, -).  Bob Wielinga.

Jun 17, 2004

  * FIXED: pass base_uri option to rdf_load from rdfe_load to avoid clashes
    of bnodes.

Jun 16, 2004

  * FIXED: rdf(-,+,+) was indexed as rdf(-,+,-) if the object is a resource.

Jun 2, 2004

  * ADDED: rdf_is_bnode/1

May 22, 2004

  * FIXED: Literal string matching broken with introduction of
    language support. (Sandro Hawke)

Apr 23, 2004

  * ADDED: first version of lang and dataType support.  Improved test-suite

Apr 22, 2004

  * ADDED: Support for arbitrary Prolog values for `Object'.  This will be
    used to support xml:lang, rdf:dataType and XML literals.

Apr 11, 2004

  * FIXED: rdf:parseType="Collection": XML attribute value _always_ requires
    quotes.  Maarten Menken.

Apr 1, 2004

  * FIXED: Save toplevel anonymous resources unless anon(false) is provided
    in the option list of rdf_save/2.  Simon Price and Dan Brickley.

  * ADDED: Option list to rdf_save/2

Nov 29, 2003

  * FIXED: rdfs_individual_of(+, -) (only generated Resource).

Nov 20, 2003

  * FIXED: Avoid the use of typed nodes if the type-resource cannot be
    expressed as an XML name.

  * FIXED: non-determinism in rdf_node/1 and rdf_bnode/1.

Nov 17, 2003

  * FIXED: rdfs_subclass_of/2 to make all classes a subclass of rdfs:'Class'.

  * FIXED: rdf_save/[1,2] to handle XML escapes `value'
    in rdf:resource="value".

  * ADDED: rdf_bnode/1 to generate a blank node identifier as __bnode<N>

  * ADDED: rdfs_assert_list/2 to create an rdf list from resources.

Nov 7, 2003

  * ADDED: Allows rdf_load/[1,2] to process a stream.  Maarten Menken.

Oct 27, 2003

  * ADDED: installation of owl.owl. 

Oct 16, 2003

  * MODIFIED: Add source-file to MD5 computation for triples to make it
    possible to locate the journal snapshot using the MD5.

  * FIXED: Added replay of rdfe_unload/1.

Oct 9, 2003
